--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "publish": "git add * && git commit -m version && npm version patch && npm publish --access public"
   },
   "author": "",
   "license": "ISC",
