--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "publish": "git add * && git commit -m version && npm version patch && npm publish --access public"
+    "publish": "npm version patch && npm publish --access public"
   },
   "author": "",
   "license": "ISC",
