--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypertype/tools",
-  "version": "1.0.13",
+  "version": "1.0.15",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -19,6 +19,7 @@
     "@types/chai": "^4.1.7",
     "chai": "^4.2.0",
     "mocha-typescript": "^1.1.17",
-    "ts-jest": "^23.10.5"
+    "ts-jest": "^23.10.5",
+    "webpack": "^4.29.3"
   }
 }
