--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "hypertype": "build/bundle.js"
+    "hypertype": "build/bin.js"
   },
   "scripts": {
     "deploy": "git add * && git commit -m version && npm version patch && npm publish --access public"
@@ -18,8 +18,17 @@
   "dependencies": {
     "@types/chai": "^4.1.7",
     "chai": "^4.2.0",
+    "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "mocha-typescript": "^1.1.17",
+    "string-loader": "0.0.1",
     "ts-jest": "^23.10.5",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "webpack": "^4.29.3"
+  },
+  "devDependencies": {
+    "jest": "^24.1.0"
   }
 }
