--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "@types/chai": "^4.1.7",
+    "awesome-typescript-loader": "^5.2.1",
     "chai": "^4.2.0",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
