--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "@types/chai": "^4.1.7",
+    "@types/node": "^11.11.3",
     "awesome-typescript-loader": "^5.2.1",
     "chai": "^4.2.0",
     "css-loader": "^2.1.1",
@@ -27,6 +28,7 @@
     "string-loader": "0.0.1",
     "ts-jest": "^23.10.5",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^3.3.3333",
     "webpack": "^4.29.3"
   },
   "devDependencies": {
