--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "ts-jest": "^23.10.5",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.3.3333",
-    "webpack": "^4.29.3"
+    "webpack": "^4.29.3",
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-dev-server": "^3.2.1"
   },
   "devDependencies": {
     "jest": "^24.1.0"
