--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mocha-typescript": "^1.1.17",
+    "node-libs-browser": "^2.2.0",
     "string-loader": "0.0.1",
     "ts-jest": "^23.10.5",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.3",
     "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
     "jest": "^24.1.0"
