--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "bundledDependencies": [
     "@types/chai",
     "@types/node",
-    "awesome-typescript-loader",
     "chai",
     "css-loader",
     "html-webpack-plugin",
@@ -35,21 +34,22 @@
     "webpack-merge",
     "jest"
   ],
+  "dependencies": {
+    "typescript": "^3.3.3333",
+    "less-loader": "^4.1.0",
+    "css-loader": "^2.1.1",
+    "awesome-typescript-loader": "^5.2.1"
+  },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/node": "^11.11.3",
-    "awesome-typescript-loader": "^5.2.1",
     "chai": "^4.2.0",
-    "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
     "mocha-typescript": "^1.1.17",
     "node-libs-browser": "^2.2.0",
     "string-loader": "0.0.1",
-    "ts-jest": "^23.10.5",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.3.3333",
     "webpack": "^4.29.3",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-dev-server": "^3.2.1",
