--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "css-loader",
     "string-loader"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/node": "^11.11.3",
@@ -55,5 +54,6 @@
     "css-loader": "^2.1.1",
     "string-loader": "0.0.1",
     "jest": "^24.1.0"
-  }
+  },
+  "dependencies": {}
 }
