--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   ],
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "@types/node": "^11.11.3",
     "chai": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
@@ -53,5 +52,8 @@
     "string-loader": "0.0.1",
     "jest": "^24.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/node": "^11.11.3",
+    "typescript": "^3.5.3"
+  }
 }
